2025.03.30 - 5: finally got rid of modularity and JLink